6.5.0
[add] Video quality selection to Settings - MPEG-DASH
[add] Limit to 30fps to Settings - MPEG-DASH
[fix] unescape html entities in title and plot
[fix] handling of invalid grant when refreshing access token
[fix] adding suggested videos when played from some widgets
[fix] http server /client_ip using Python 3 |contrib: t6|
[upd] refactor youtube_resolver.resolve
[lang] es_es strings |contrib: roliverosc|

6.4.1
[upd] Use the activation url provided by the authentication request
[add] add Settings - MPEG-DASH - Default to WEBM adaptation set
        - required for 4k stream automatic selection
[add] add Settings - MPEG-DASH - Include VP9.2
        - includes HDR content in the manifest
[add] add support for &hide_folders=true parameter in search query urls
        - when added to the url it will hide the Playlists, Channels, and Live folders
[add] &seek=<time_in_seconds> to play urls
[fix] fix playback of Purchases
[fix] fixed saved playlists that don't belong to a channel
[fix] mpeg-dash frame rate representation
[fix] datetime parsing if no datetime string is available
[chg] handle playback monitoring in threads
[lang] nl_nl strings |contrib: MB1968|
[lang] el_gr strings |contrib: twilight0|

6.4.0
[add] 4K videos with InputStream Adaptive >= v2.3.14
        - Thanks to @peak3d
[fix] some videos not playing when logged in
[fix] reset function cache at restart/update to resolve issues persisting due to cached results
[fix] service potentially not shutting down http server
[fix] added to playlist/subscriptions notifications
[fix] only generate mpeg-dash file if adaptive formats are available
[fix] map frame rates to more common representation to lessen the chance of double refresh rate changes (only applies to generated mpeg-dash files)
[fix] currently playing file check when playing file is a plugin:// url
[chg] Settings - General - Autoplay suggested videos
        - limit playlist size to 1000 videos
        - request less relevant videos at one time